# gcp-agentic-day

./: .gitignore  README.md
backend/: .gitignore  __init__.py  check_rag_permissions.py  cleanup_and_redeploy.py  cleanup_old_deployment.py  deploy.py  deploy.sh  deploy_new_2.py  deployment_status.py  diagnose_rag_issue.py  fix_all_permissions.py  main.py  pyproject.toml  requirements.txt  test_deployed_agent.py  test_rag_query.py  test_setup.py
backend/agents/kisan_agent/: __init__.py  agent.py  prompt.py
backend/agents/kisan_agent/sub_agents/: __init__.py
backend/agents/kisan_agent/sub_agents/government_schemes_agent/: __init__.py  agent.py  prompt.py
backend/agents/kisan_agent/sub_agents/market_analyzer_agent/: __init__.py  agent.py  prompt.py
backend/agents/kisan_agent/sub_agents/plant_health_support_agent/: agent.py  prompt.py  tools.py
backend/agents/kisan_agent/sub_agents/weather_agent/: agent.py  tool.py
backend/agents/tools/: __init__.py  weather_tool.py
backend/archives/plant_disease_detector_agent/: __init__.py  agent.py  prompt.py
backend/deployement/: deploy.py
backend/kisan_agent/: agent.py
backend/kisan_agent/sub_agents/government_schemes_agent/: agent.py  prompt.py
backend/kisan_agent/sub_agents/government_schemes_agent/prepare_corpus/: prepare_corpus.py
backend/kisan_agent/sub_agents/market_analyzer_agent/: agent.py  tools.py
backend/kisan_agent/sub_agents/plant_health_support_agent/: agent.py  initial_data.txt
backend/services/: ai_service.py  speech_service.py  storage_tools.py
backend_v1/: Dockerfile  README.md  main.py  (+1 more)
(+75 files in other folders)
